# overwatch_survey

./: .coveragerc  .gitignore  LICENSE-APACHE  README.md  README.rst  pyproject.toml  requirements.txt  run_all.sh  setup.py
data/: overwatch_heroes.csv  survey_raw.csv
overwatch_survey/: Analysis.ipynb  fix_typos.py  insert_response_id.py  split_into_tables.py  static_site_prep.py  transform_data.py
pip-wheel-metadata/overwatch_survey.dist-info/: LICENSE-MIT  METADATA  top_level.txt
static_site/: Analysis.md  _config.yml  index.md
static_site/_layouts/: default.html
static_site/assets/css/: styles.scss
